syntax = "proto3";
package test;

import "google/protobuf/timestamp.proto";

option go_package = "/genproto;grpc";

service PersonService {
  rpc GetPersonInfo(PersonName) returns (Person);
}

message PersonName {
  string name = 1;
}

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    UNUSED = 0;
    MOBILE = 1;
    HOME = 2;
    WORK = 3;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}